Admin registration type && controller && route created.

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-PORT=8000
+PORT=4000
+DB_URL=mongodb+srv://bokhtiar:bokhtiar@cluster0.8z6ss.mongodb.net/typescriptNodejs?retryWrites=true&w=majority
