--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=4000
-DB_URL=mongodb+srv://bokhtiar:bokhtiar@cluster0.8z6ss.mongodb.net/typescriptNodejs?retryWrites=true&w=majority
+JWT_SECRET=MY_SECRET
+DB_URL=mongodb+srv://bokhtiar:bokhtiar@cluster0.8z6ss.mongodb.net/BEcommerce?retryWrites=true&w=majority
