--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "morgan": "^1.10.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "mongoose": "^6.7.0",
-    "morgan": "^1.10.0"
+    "jsonwebtoken": "^8.5.1",
+    "body-parser": "^1.20.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
