--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "morgan": "^1.10.0",
-    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
-    "mongoose": "^6.7.0",
     "jsonwebtoken": "^8.5.1",
-    "body-parser": "^1.20.1"
+    "mongoose": "^6.7.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.3",
+    "@types/slug": "^5.0.3",
     "async-validator": "^4.2.5",
     "concurrently": "^7.5.0",
     "mongoose": "^6.5.2",
